Updated Registration Controller